@@ -5,8 +5,8 @@ import org.junit.jupiter.api.Test;
 import se2.server.hanabi.game.GameManager;
 import se2.server.hanabi.model.Card;
 import se2.server.hanabi.model.Deck;
+import se2.server.hanabi.model.Player;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -19,21 +19,22 @@ class DrawServiceTest {
     @BeforeEach
     void setUp() {
         drawService = new DrawService();
-        List<Integer> players = Arrays.asList(1, 2); // Using player IDs instead of names
-        gameManager = GameManager.createNewGame(players);
-        playerId = 1; // Assigning player ID instead of name
+        Player player1 = new Player("alice");
+        Player player2 = new Player("bob");
+        gameManager = GameManager.createNewGame(List.of(player1, player2));
+        playerId = player1.getId(); // Assigning player ID instead of name
     }
 
     @Test
     void testDrawCardToPlayerHand_success() {
         int initialHandSize = gameManager.getHands().get(playerId).size();
-        int initialDeckSize = gameManager.getDeck().getRemainingCards();
+        int initialDeckSize = gameManager.getDeck().getNumRemainingCards();
 
         Card card = drawService.drawCardToPlayerHand(gameManager, playerId);
 
         assertNotNull(card);
         assertEquals(initialHandSize + 1, gameManager.getHands().get(playerId).size());
-        assertEquals(initialDeckSize - 1, gameManager.getDeck().getRemainingCards());
+        assertEquals(initialDeckSize - 1, gameManager.getDeck().getNumRemainingCards());
     }
 
     @Test
